@@ -410,9 +410,15 @@ function rcmail_compose_body($attrib)
     $body = rcmail_create_draft_body($body, $isHtml);
     }
 
+  $tinylang = substr($_SESSION['user_lang'], 0, 2); 
+  if (!file_exists('program/js/tiny_mce/langs/'.$tinylang.'.js'))
+    { 
+    $tinylang = 'en'; 
+    } 
+
   $OUTPUT->include_script('tiny_mce/tiny_mce.js');
   $OUTPUT->include_script("editor.js");
-  $OUTPUT->add_script('rcmail_editor_init("$__skin_path");');
+  $OUTPUT->add_script('rcmail_editor_init("$__skin_path", "'.$tinylang.'");');
 
   $out = $form_start ? "$form_start\n" : '';
 
